--- a/docs/source/css/custom.css
+++ b/docs/source/css/custom.css
@@ -11,6 +11,7 @@
 .sphx-glr-thumbcontainer img {
     max-height: 100px !important;
     width: 100px !important;
+    margin: 1px !important;
 }
 .sphx-glr-thumbcontainer a.internal {
     padding: 270px 10px 0 !important;
