--- a/docs/source/css/custom.css
+++ b/docs/source/css/custom.css
@@ -1,6 +1,6 @@
-.wy-nav-content {
+/*.wy-nav-content {
     max-width: 100% !important;
-}
+}*/
 .sphx-glr-thumbcontainer {
     min-height: 320px !important;
     margin: 1px !important;
