--- a/docs/source/css/custom.css
+++ b/docs/source/css/custom.css
@@ -9,6 +9,7 @@
     width: 100px !important;
 }
 .sphx-glr-thumbcontainer img {
+    display: inline;
     max-height: 100px !important;
     max-width: 100px !important;
     margin: 1px !important;
