--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,22 +1,22 @@
-/*.wy-nav-content {
-    max-width: 100% !important;
-}*/
-/*.sphx-glr-thumbcontainer {
+.wy-nav-content {
+    max-width: 120% !important;
+}
+.sphx-glr-thumbcontainer {
     min-height: 320px !important;
     margin: 1px !important;
 }
 .sphx-glr-thumbcontainer .figure {
     width: 100px !important;
-}*/
+}
 .sphx-glr-thumbcontainer img {
     display: inline;
-    max-height: 10px !important;
-    max-width: 10px !important;
+    max-height: 100px !important;
+    max-width: 100px !important;
     margin: 1px !important;
 }
-/*.sphx-glr-thumbcontainer a.internal {
+.sphx-glr-thumbcontainer a.internal {
     padding: 270px 10px 0 !important;
-}*/
+}
 .bottom-of-page {
     visibility: hidden;
 }
