--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,8 +1,8 @@
 .wy-nav-content {
-    width: 120% !important;
+    max-width: 120% !important;
 }
 .sphx-glr-thumbcontainer {
-    height: 100px !important;
+    min-height: 100px !important;
     margin: 1px !important;
 }
 .sphx-glr-thumbcontainer .figure {
@@ -10,8 +10,8 @@
 }
 .sphx-glr-thumbcontainer img {
     display: inline;
-    height: 100px !important;
-    width: 100px !important;
+    max-height: 100px !important;
+    max-width: 100px !important;
     margin: 1px !important;
 }
 .sphx-glr-thumbcontainer a.internal {
@@ -21,7 +21,7 @@
     visibility: hidden;
 }
 .sphx-glr-thumbnails {
-    height: 100px !important;
-    width: 100px !important;
+    max-height: 100px !important;
+    max-width: 100px !important;
     margin: 1px !important;
 }
