--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,27 +1,113 @@
 .wy-nav-content {
     max-width: 120% !important;
 }
+/*copy from _static/sg_gallery.css file*/
+.sphx-glr-thumbnails {
+  width: 50%;
+  margin: 0px 0px 0px 0px;
+
+  /* align thumbnails on a grid */
+  justify-content: space-between;
+  display: grid;
+  /* each grid column should be at least 160px (this will determine
+  the actual number of columns) and then take as much of the
+  remaining width as possible */
+  grid-template-columns: repeat(auto-fill, minmax(10px, 1fr));
+  gap: 1px;
+}
+.sphx-glr-thumbnails .toctree-wrapper {
+  /* hide empty toctree divs added to the DOM
+  by sphinx even though the toctree is hidden
+  (they would fill grid places with empty divs) */
+  display: none;
+}
 .sphx-glr-thumbcontainer {
-    min-height: 100px !important;
-    margin: 1px !important;
+  background: transparent;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 0px var(--sg-thumb-box-shadow-color);
+
+  /* useful to absolutely position link in div */
+  position: relative;
+
+  /* thumbnail width should include padding and borders
+  and take all available space */
+  box-sizing: border-box;
+  width: 50%;
+  padding: 10px;
+  border: 1px solid transparent;
+
+  /* align content in thumbnail */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 7px;
 }
-.sphx-glr-thumbcontainer .figure {
-    width: 100px !important;
+.sphx-glr-thumbcontainer p {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-.sphx-glr-thumbcontainer img {
-    display: inline;
-    max-height: 100px !important;
-    max-width: 100px !important;
-    margin: 1px !important;
+.sphx-glr-thumbcontainer p,
+.sphx-glr-thumbcontainer p a {
+  /* link should cover the whole thumbnail div */
+  width: 100%;
+  height: 100%;
+}
+.sphx-glr-thumbcontainer p a span {
+  /* text within link should be masked
+  (we are just interested in the href) */
+  display: none;
+}
+.sphx-glr-thumbcontainer:hover {
+  border: 1px solid;
+  border-color: var(--sg-thumb-hover-border);
+  cursor: pointer;
 }
 .sphx-glr-thumbcontainer a.internal {
-    padding: 100px 10px 0 !important;
+  bottom: 0;
+  display: block;
+  left: 0;
+  box-sizing: border-box;
+  padding: 150px 10px 0;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
-.bottom-of-page {
-    visibility: hidden;
+/* Next one is to avoid Sphinx traditional theme to cover all the
+thumbnail with its default link Background color */
+.sphx-glr-thumbcontainer a.internal:hover {
+  background-color: transparent;
 }
-.sphx-glr-thumbnails {
-    max-height: 100px !important;
-    max-width: 100px !important;
-    margin: 1px !important;
+
+.sphx-glr-thumbcontainer p {
+  margin: 0 0 0.1em 0;
+}
+.sphx-glr-thumbcontainer .figure {
+  margin: 1px;
+  width: 100px;
+}
+.sphx-glr-thumbcontainer img {
+  display: inline;
+  max-height: 100px;
+  max-width: 100px;
+}
+.sphx-glr-thumbcontainer[tooltip]:hover:after {
+  background: var(--sg-tooltip-background);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  color: var(--sg-tooltip-foreground);
+  content: attr(tooltip);
+  padding: 10px;
+  z-index: 98;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  top: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  backdrop-filter: blur(3px);
 }
