--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -12,6 +12,8 @@
   remaining width as possible */
   grid-template-columns: repeat(3, 33.33%);
   gap: 1px;
+  border-style:solid;
+  border-width:5px;
 }
 .sphx-glr-thumbcontainer {
   /* align content in thumbnail */
