--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -9,14 +9,14 @@
   /* each grid column should be at least 160px (this will determine
   the actual number of columns) and then take as much of the
   remaining width as possible */
-  grid-template-columns: 150px 150px 150px 150px;
+  grid-template-columns: 150px;
   gap: 1px;
 }
 .sphx-glr-thumbcontainer {
   width: 50%;
   justify-content: space-evenly;
   /* align content in thumbnail */
-  display: grid;
-  grid-template-columns: 200px 200px 200px;
+  display: inline-grid;
+  grid-template-columns: 200px 200px;
   gap: 5px;
 }
