--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -3,20 +3,119 @@
 }
 /*copy from _static/sg_gallery.css file*/
 .sphx-glr-thumbnails {
-  margin: 0px 0px 0px 0px;
+  width: 100%;
+  margin: 0px 0px 20px 0px;
+
   /* align thumbnails on a grid */
-  display: grid;
+  justify-content: space-between;
   /* each grid column should be at least 160px (this will determine
   the actual number of columns) and then take as much of the
   remaining width as possible */
-  grid-template-columns: 150px;
-  gap: 1px;
+  display: grid;
+  grid-template-columns: 160px 160px;
+  gap: 15px;
+}
+.sphx-glr-thumbnails .toctree-wrapper {
+  /* hide empty toctree divs added to the DOM
+  by sphinx even though the toctree is hidden
+  (they would fill grid places with empty divs) */
+  display: none;
 }
 .sphx-glr-thumbcontainer {
-  width: 50%;
-  justify-content: space-evenly;
+  background: transparent;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px var(--sg-thumb-box-shadow-color);
+
+  /* useful to absolutely position link in div */
+  position: relative;
+
+  /* thumbnail width should include padding and borders
+  and take all available space */
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid transparent;
+
   /* align content in thumbnail */
-  display: inline-grid;
-  grid-template-columns: 200px 200px;
-  gap: 5px;
+  display: grid;
+  grid-template-columns: 160px 160px;
+  align-items: center;
+  gap: 7px;
+}
+.sphx-glr-thumbcontainer p {
+  display: grid;
+  grid-template-columns: 160px 160px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.sphx-glr-thumbcontainer p,
+.sphx-glr-thumbcontainer p a {
+  /* link should cover the whole thumbnail div */
+  width: 100%;
+  height: 100%;
+}
+.sphx-glr-thumbcontainer p a span {
+  /* text within link should be masked
+  (we are just interested in the href) */
+  display: none;
+}
+.sphx-glr-thumbcontainer:hover {
+  border: 1px solid;
+  border-color: var(--sg-thumb-hover-border);
+  cursor: pointer;
+}
+.sphx-glr-thumbcontainer a.internal {
+  bottom: 0;
+  display: grid;
+  grid-template-columns: 160px 160px;
+  left: 0;
+  box-sizing: border-box;
+  padding: 150px 10px 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+/* Next one is to avoid Sphinx traditional theme to cover all the
+thumbnail with its default link Background color */
+.sphx-glr-thumbcontainer a.internal:hover {
+  background-color: transparent;
+}
+
+.sphx-glr-thumbcontainer p {
+  display: grid;
+  grid-template-columns: 160px 160px;
+  margin: 0 0 0.1em 0;
+}
+.sphx-glr-thumbcontainer .figure {
+  display: grid;
+  grid-template-columns: 160px 160px;
+  margin: 10px;
+  width: 160px;
+}
+.sphx-glr-thumbcontainer img {
+  display: grid;
+  grid-template-columns: 160px 160px;
+  max-height: 112px;
+  max-width: 160px;
+}
+.sphx-glr-thumbcontainer[tooltip]:hover:after {
+  background: var(--sg-tooltip-background);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  color: var(--sg-tooltip-foreground);
+  content: attr(tooltip);
+  padding: 10px;
+  z-index: 98;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  top: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  backdrop-filter: blur(3px);
 }
