--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -12,7 +12,7 @@
   the actual number of columns) and then take as much of the
   remaining width as possible */
   display: grid;
-  grid-template-columns: 160px 160px;
+  grid-template-columns: 160px;
   gap: 15px;
 }
 .sphx-glr-thumbcontainer {
