--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -3,35 +3,48 @@
 }
 /*copy from _static/sg_gallery.css file*/
 .sphx-glr-thumbnails {
-  width: 100%;
-  margin: 0px 0px 00px 0px;
+  width: 90%;
+  margin: auto;
 
   /* align thumbnails on a grid */
   justify-content: space-between;
   /* each grid column should be at least 160px (this will determine
   the actual number of columns) and then take as much of the
   remaining width as possible */
-
+  display: grid;
+  grid-template-columns: 160px;
   gap: 15px;
 }
-
 .sphx-glr-thumbcontainer {
-    min-height: 320px !important;
-    margin: 20px !important;
-    display: grid;
-    grid-template-columns: 320px 320px;
+  background: transparent;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px var(--sg-thumb-box-shadow-color);
+
+  /* useful to absolutely position link in div */
+  position: relative;
+
+  /* thumbnail width should include padding and borders
+  and take all available space */
+  box-sizing: border-box;
+  width: 33%;
+  padding: 10px;
+  border: 1px solid transparent;
+
+  /* align content in thumbnail */
+  display: grid;
+  grid-template-columns: 160px 160px;
+  align-items: center;
+  gap: 7px;
+  margin: auto;
 }
 .sphx-glr-thumbcontainer .figure {
-    width: 250px !important;
-    display: grid;
-    grid-template-columns: 250px 250px;
+    margin: auto;
 }
 .sphx-glr-thumbcontainer img {
-    max-height: 250px !important;
-    width: 250px !important;
-    display: grid;
-    grid-template-columns: 250px 250px;
+    margin: auto;
 }
 .sphx-glr-thumbcontainer a.internal {
-    padding: 270px 10px 0 !important;
+    margin: auto;
 }
