--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -6,6 +6,7 @@
   width: 90%;
   margin: auto;
   align-items: center;
+  text-align: center;
 }
 .sphx-glr-thumbcontainer {
   background: transparent;
